src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>DT_JOB_Address_Special_Delivery_Comments__c</fullName>
        <label>DT JOB Address Special Delivery Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_JOB_Address_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DT JOB Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DT_JOB_City__c</fullName>
        <label>DT JOB City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_JOB_Contact_Email_Address__c</fullName>
        <label>DT JOB Contact Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_JOB_Country__c</fullName>
        <label>DT JOB Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_JOB_County__c</fullName>
        <label>DT JOB County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_JOB_Fax__c</fullName>
        <label>DT JOB Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_JOB_Hours_Before__c</fullName>
        <label>DT JOB Hours Before</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DT_JOB_Postal_Code__c</fullName>
        <label>DT JOB Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_JOB_State__c</fullName>
        <label>DT JOB State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_LEN_Address_Contact__c</fullName>
        <label>DT LEN Address Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_LEN_Address_ID__c</fullName>
        <label>DT LEN Address ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DT_LEN_Address_Line_1__c</fullName>
        <label>DT LEN Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_LEN_Address_Line_2__c</fullName>
        <label>DT LEN Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_LEN_Address_Line_3__c</fullName>
        <label>DT LEN Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_LEN_Address_Name__c</fullName>
        <label>DT LEN Address Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_LEN_Address_Phone__c</fullName>
        <label>DT LEN Address Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_LEN_Address_Special_Delivery_Comments__c</fullName>
        <label>DT LEN Address Special Delivery Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_LEN_Address_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DT LEN Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DT_LEN_City__c</fullName>
        <label>DT LEN City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_LEN_Contact_Email_Address__c</fullName>
        <label>DT LEN Contact Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_LEN_Country__c</fullName>
        <label>DT LEN Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_LEN_County__c</fullName>
        <label>DT LEN County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_LEN_Fax__c</fullName>
        <label>DT LEN Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_LEN_Hours_Before__c</fullName>
        <label>DT LEN Hours Before</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DT_LEN_Postal_Code__c</fullName>
        <label>DT LEN Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_LEN_State__c</fullName>
        <label>DT LEN State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_OSP_First_Name__c</fullName>
        <label>DT OSP First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_OSP_ID__c</fullName>
        <label>DT OSP ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_OSP_Last_Name__c</fullName>
        <label>DT OSP Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_OWN_Address_Contact__c</fullName>
        <label>DT OWN Address Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_OWN_Address_ID__c</fullName>
        <label>DT OWN Address ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DT_OWN_Address_Line_1__c</fullName>
        <label>DT OWN Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_OWN_Address_Line_2__c</fullName>
        <label>DT OWN Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_OWN_Address_Line_3__c</fullName>
        <label>DT OWN Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_OWN_Address_Name__c</fullName>
        <label>DT OWN Address Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_OWN_Address_Phone__c</fullName>
        <label>DT OWN Address Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_OWN_Address_Special_Delivery_Comments__c</fullName>
        <label>DT OWN Address Special Delivery Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_OWN_Address_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DT OWN Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DT_OWN_City__c</fullName>
        <label>DT OWN City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_OWN_Contact_Email_Address__c</fullName>
        <label>DT OWN Contact Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_OWN_Country__c</fullName>
        <label>DT OWN Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_OWN_County__c</fullName>
        <label>DT OWN County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_OWN_Fax__c</fullName>
        <label>DT OWN Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_OWN_Hours_Before__c</fullName>
        <label>DT OWN Hours Before</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DT_OWN_Postal_Code__c</fullName>
        <label>DT OWN Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_OWN_State__c</fullName>
        <label>DT OWN State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Order_Status__c</fullName>
        <label>DT Order Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Postal_Code__c</fullName>
        <label>DT Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_SHP_Address_Contact__c</fullName>
        <label>DT SHP Address Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_SHP_Address_ID__c</fullName>
        <label>DT SHP Address ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DT_SHP_Address_Line_1__c</fullName>
        <label>DT SHP Address Line1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_SHP_Address_Line_2__c</fullName>
        <label>DT SHP Address Line2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_SHP_Address_Line_3__c</fullName>
        <label>DT SHP Address Line3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_SHP_Address_Name__c</fullName>
        <label>DT SHP Address Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_SHP_Address_Phone__c</fullName>
        <label>DT SHP Address Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_SHP_Address_Special_Delivery_Comments__c</fullName>
        <label>DT SHP Special Delivery Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_SHP_Address_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DT SHP Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DT_SHP_City__c</fullName>
        <label>DT SHP City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_SHP_Contact_Email_Address__c</fullName>
        <label>DT SHP Contact Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_SHP_Country__c</fullName>
        <label>DT SHP Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_SHP_County__c</fullName>
        <label>DT SHP County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_SHP_Fax__c</fullName>
        <label>DT SHP Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_SHP_Hours_Before__c</fullName>
        <label>DT SHP Hours Before</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DT_SHP_Postal_Code__c</fullName>
        <label>DT SHP Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_SHP_State__c</fullName>
        <label>DT SHP State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_SLD_Address_Contact__c</fullName>
        <label>DT SLD Address Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_SLD_Address_ID__c</fullName>
        <label>DT SLD Address ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DT_SLD_Address_Line_1__c</fullName>
        <label>DT SLD Address Line1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_SLD_Address_Line_2__c</fullName>
        <label>DT SLD Address Line2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_SLD_Address_Line_3__c</fullName>
        <label>DT SLD Address Line3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_SLD_Address_Name__c</fullName>
        <label>DT SLD Address Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_SLD_Address_Phone__c</fullName>
        <label>DT SLD Address Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_SLD_Address_Special_Delivery_Comments__c</fullName>
        <label>DT SLD Address Special Delivery Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_SLD_Address_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DT SLD Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DT_SLD_City__c</fullName>
        <label>DT SLD City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_SLD_Contact_Email_Address__c</fullName>
        <label>DT SLD Contact Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_SLD_Country__c</fullName>
        <label>DT SLD Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_SLD_County__c</fullName>
        <label>DT SLD County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_SLD_Fax__c</fullName>
        <label>DT SLD Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_SLD_Hours_Before__c</fullName>
        <label>DT SLD Hours Before</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DT_SLD_Postal_Code__c</fullName>
        <label>DT SLD PostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_SLD_State__c</fullName>
        <label>DT SLD State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Source__c</fullName>
        <label>DT Source</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_TSC_Address_Contact__c</fullName>
        <label>DT TSC Address Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_TSC_Address_ID__c</fullName>
        <label>DT TSC Address ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DT_TSC_Address_Line_1__c</fullName>
        <label>DT TSC Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_TSC_Address_Line_2__c</fullName>
        <label>DT TSC Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_TSC_Address_Line_3__c</fullName>
        <label>DT TSC Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_TSC_Address_Name__c</fullName>
        <label>DT TSC Address Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_TSC_Address_Phone__c</fullName>
        <label>DT TSC Address Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_TSC_Address_Special_Delivery_Comments__c</fullName>
        <label>DT TSC Address Special Delivery Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_TSC_Address_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DT TSC Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DT_TSC_City__c</fullName>
        <label>DT TSC City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_TSC_Contact_Email_Address__c</fullName>
        <label>DT TSC Contact Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_TSC_Country__c</fullName>
        <label>DT TSC Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_TSC_County__c</fullName>
        <label>DT TSC County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_TSC_Fax__c</fullName>
        <label>DT TSC Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_TSC_Hours_Before__c</fullName>
        <label>DT TSC Hours Before</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DT_TSC_Postal_Code__c</fullName>
        <label>DT TSC Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_TSC_State__c</fullName>
        <label>DT TSC State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daikin_Players_Rollup__c</fullName>
        <label>Daikin Players Rollup</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Daikin_Sales_Rep_Account__c</fullName>
        <description>Contact Record --&gt; Account</description>
        <formula>Daikin_Sales_Rep__r.Account.Name</formula>
        <inlineHelpText>Daikin Sales Rep Account (pulled from the contact record)</inlineHelpText>
        <label>Daikin Sales Rep - Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daikin_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for the National Sales Team</description>
        <inlineHelpText>Daikin Sales Rep that is associated to the Opportunity</inlineHelpText>
        <label>Daikin Sales Rep</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <infoMessage>Only Active Records will be returned</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Daikin Sales Rep)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Daikin_Terms_and_Conditions_Modified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Daikin Terms and Conditions Modified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Daikin_Tools_Job_Name__c</fullName>
        <label>Daikin Tools Job Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daikin_Tools_User_First_Name__c</fullName>
        <label>Daikin Tools User First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daikin_Tools_User_ID__c</fullName>
        <label>Daikin Tools User ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daikin_Tools_User_Last_Name__c</fullName>
        <label>Daikin Tools User Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daikin_Tools_User_Middle_Initial__c</fullName>
        <label>Daikin Tools User Middle Initial</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter in the Dealer. Dealer must already be created as an Account</description>
        <inlineHelpText>Enter in the Dealer. Dealer must already be created as an Account</inlineHelpText>
        <label>Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Dealer Name)</relationshipLabel>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Definition_of_Terms_10__c</fullName>
        <defaultValue>&quot;Shifts the focus of the customer’s buying criteria to new or different issues that favor your solution.  This approach requires strong inside customer support, political alignment and must create incremental Business value for the customer in order to be effective.&quot;</defaultValue>
        <label>Flanking Strategy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Definition_of_Terms_11__c</fullName>
        <defaultValue>&quot;Divides the opportunity into smaller pieces and focuses the customer on a subset of the issues that you can address.  This approach requires strong inside customer support, political alignment and must create incremental Business value for the customer in order to be effective.&quot;</defaultValue>
        <label>Fragment Strategy</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Definition_of_Terms_12__c</fullName>
        <defaultValue>&quot;Protects your position from the inevitable assault from your competitors. We use this approach when there is no compelling event (#5), OR we are not in a position to compete and we have existing business with the account that we need to protect.&quot;</defaultValue>
        <label>Defend strategy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Definition_of_Terms__c</fullName>
        <defaultValue>&quot;Prefers your solution and sell in our absence                                                                                                 &quot;</defaultValue>
        <label>Mentor</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_the_competitive_landscape__c</fullName>
        <inlineHelpText>Describe the competitive landscape (External Competition, Internal Initiatives &amp; the Status Quo).</inlineHelpText>
        <label>Describe the competitive landscape</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_Document_Stage__c</fullName>
        <description>This stage refers to the incremental stage in the design that the owner’s design team has completed in regards to design documents. This includes pre-design planning, design documentation, &amp; post-design document submittal review. This field is specific to plan &amp; spec projects. This was created for the DSO’s; requested by John Jeffcoat.</description>
        <inlineHelpText>This stage refers to the incremental stage in the design that the owner’s design team has completed in regards to design documents. This field is specific to plan &amp; spec projects.</inlineHelpText>
        <label>Design Document Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Potential Future Design</fullName>
                </value>
                <value>
                    <fullName>Pre-Design</fullName>
                </value>
                <value>
                    <fullName>Design Build - Budget</fullName>
                </value>
                <value>
                    <fullName>Design Build - Hard Pricing</fullName>
                </value>
                <value>
                    <fullName>Schematic Design</fullName>
                </value>
                <value>
                    <fullName>Design Development</fullName>
                </value>
                <value>
                    <fullName>Construction Documents</fullName>
                </value>
                <value>
                    <fullName>Construction Documents – 75%</fullName>
                </value>
                <value>
                    <fullName>Construction Documents – 95%(+)</fullName>
                </value>
                <value>
                    <fullName>Bid Date Established (Proposal)</fullName>
                </value>
                <value>
                    <fullName>Post Bid – Daikin Status Unknown</fullName>
                </value>
                <value>
                    <fullName>Pre-Submittal</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Project Released - Active</fullName>
                </value>
                <value>
                    <fullName>Project Complete</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Developer)</relationshipLabel>
        <relationshipName>OpportunitiessOmJ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distributor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Enter in the Distributer. Distributer must already be created as an Account</description>
        <inlineHelpText>Enter in the Distributer. Distributer must already be created as an Account</inlineHelpText>
        <label>Distributor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Distributor Name)</relationshipLabel>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Do_Not_Sync_Line_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If certain conditions are true do not sync job item data from Daikin Tools to Salesforce</description>
        <label>Do Not Sync Line Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_they_have_enough_power_alignment__c</fullName>
        <inlineHelpText>Do they have enough power/alignment to sell the project internally?</inlineHelpText>
        <label>Do they have enough power/alignment?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dt_Contact_EmailAddress__c</fullName>
        <label>Dt Contact EmailAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <description>This formula evaluates Entity based on the country selected. Only for Latin America</description>
        <formula>If(CONTAINS(&quot;Antigua and Barbuda:Argentina:Aruba:Barbados:Belize_BLZ:Bermuda Islands:Bonaire:Brazil,:Cayman Islands:&quot; &amp;
  &quot;Costa Rica:Cuba:Curacao:Dominica:Dominican Republic:Ecuador:El Salvador:Grenada:Guatemala:Guyana:Haiti:Honduras:Italy-ITA:Jamaica:Nicaragua:&quot; &amp;
  &quot;Not Available:Panama:Saint Kitts and Nevis:Saint Lucia:Saint Martin:Saint Vincent and The Grenadines:Sint Maarten:Spain-ESP:Suriname:&quot; &amp;
  &quot;Turks and Caicos Islands:USA-USA:Venezuela:Virgin Islands:&quot;,Text(Opportunity_Country__c) ) ,&quot;DALA&quot;, 

  if(CONTAINS(&quot;Anguilla:Puerto Rico:St Croix:St John:St Marteen:St Thomas:Tortola:Trinidad and Tobago:Virgin Gorda:&quot;, Text(Opportunity_Country__c) ) ,&quot;Puerto Rico&quot;,

    if(CONTAINS(&quot;Bolivia:Chile:Paraguay:Uruguay:&quot;,Text(Opportunity_Country__c) ) ,&quot;South Cone&quot;,

      if( ISPICKVAL(Opportunity_Country__c, &quot;Bahamas, The&quot;), &quot;DALA&quot;, 

        if( ISPICKVAL(Opportunity_Country__c, &quot;Peru&quot;), &quot;Peru&quot;, 

          if( ISPICKVAL(Opportunity_Country__c, &quot;Colombia&quot;), &quot;Colombia&quot;, 

            if( ISPICKVAL(Opportunity_Country__c, &quot;Mexico&quot;), &quot;Mexico&quot;, 

               if( ISPICKVAL(Opportunity_Country__c, &quot;US-Puerto Rico&quot;), &quot;DALA&quot;,&quot;Unknown Entity, Please contact Administrator&quot;)
             )
          )

        ) 

      ) 

    )

  )

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This formula evaluates Entity based on the country selected. Only for Latin America</inlineHelpText>
        <label>Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equip_Spec__c</fullName>
        <label>Equip Spec</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DA-BOD</fullName>
                </value>
                <value>
                    <fullName>DA-Acc/Eq</fullName>
                </value>
                <value>
                    <fullName>Aaon</fullName>
                </value>
                <value>
                    <fullName>Carrier</fullName>
                </value>
                <value>
                    <fullName>CES</fullName>
                </value>
                <value>
                    <fullName>Climate Master</fullName>
                </value>
                <value>
                    <fullName>Comp Spec</fullName>
                </value>
                <value>
                    <fullName>Fujitsu</fullName>
                </value>
                <value>
                    <fullName>JCI</fullName>
                </value>
                <value>
                    <fullName>LG</fullName>
                </value>
                <value>
                    <fullName>Mammoth</fullName>
                </value>
                <value>
                    <fullName>Mitsu</fullName>
                </value>
                <value>
                    <fullName>Named</fullName>
                </value>
                <value>
                    <fullName>Sanyo</fullName>
                </value>
                <value>
                    <fullName>Trane</fullName>
                </value>
                <value>
                    <fullName>DA-FLAT</fullName>
                </value>
                <value>
                    <fullName>Munters</fullName>
                </value>
                <value>
                    <fullName>Samsung</fullName>
                </value>
                <value>
                    <fullName>Addison</fullName>
                </value>
                <value>
                    <fullName>Valent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Equipment_Gross_Margin_Percent__c</fullName>
        <description>Equipment Gross Margin %
1 - (Unit Equipment Cost $ / Unit Equipment Selling Price $)</description>
        <formula>IF(Selling_Unitary_Equipment_Price_FOB__c != 0,1 - ( Equipment_Price_FOB__c / Selling_Unitary_Equipment_Price_FOB__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Equipment Gross Margin %
1 - (Unit Equipment Cost $ / Unit Equipment Selling Price $)</inlineHelpText>
        <label>Equipment Gross Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Equipment_Price_FOB__c</fullName>
        <description>Unit Equipment Cost $
Rollup of line item Unit Equipment Cost $</description>
        <inlineHelpText>Unit Equipment Cost $
Rollup of line item Unit Equipment Cost $</inlineHelpText>
        <label>Unit Equipment Cost $</label>
        <summarizedField>OpportunityLineItem.Equipment_Price_FOB__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Equipment_Purchased_By__c</fullName>
        <description>Copied from the Lead - Shipped Equipment Info</description>
        <inlineHelpText>Name of who purchased the shipped equipment</inlineHelpText>
        <label>Equipment Purchased By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Startup_Date__c</fullName>
        <description>Copied from the Lead - Shipped Equipment</description>
        <inlineHelpText>When was the equipment started up?</inlineHelpText>
        <label>Equipment Startup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Equipment_With_F_L_Bulk__c</fullName>
        <description>Total Equipment + Freight Cost $
Rollup of line item [Total Equipment + Freight Cost $] + Bulk Items</description>
        <formula>Equipment_With_F_L__c +  Bulk_Freight__c  +  Bulk_Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Equipment + Freight Cost $
Rollup of line item [Total Equipment + Freight Cost $] + Bulk Items</inlineHelpText>
        <label>Total Equipment + Freight Cost w/ Bulk $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>